--- a/3rdparty/indi-gpsd/CMakeLists.txt
+++ b/3rdparty/indi-gpsd/CMakeLists.txt
@@ -9,8 +9,11 @@ LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/"
 
 set(BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
 set(DATA_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/share/indi/")
-set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
 set(INDI_DATA_DIR "${CMAKE_INSTALL_PREFIX}/share/indi")
+
+if (NOT WIN32 AND NOT ANDROID)
+set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
+endif(NOT WIN32 AND NOT ANDROID)
 
 find_package(INDI REQUIRED)
 find_package(Nova REQUIRED)
