--- a/3rdparty/indi-maxdomeii/CMakeLists.txt
+++ b/3rdparty/indi-maxdomeii/CMakeLists.txt
@@ -5,7 +5,9 @@ LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
 include(GNUInstallDirs)
 
-set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
+if (NOT WIN32 AND NOT ANDROID)
+set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
+endif(NOT WIN32 AND NOT ANDROID)
 
 set(INDI_MAXDOMEII_VERSION_MAJOR 1)
 set(INDI_MAXDOMEII_VERSION_MINOR 1)
