--- a/3rdparty/indi-nexstarevo/CMakeLists.txt
+++ b/3rdparty/indi-nexstarevo/CMakeLists.txt
@@ -7,7 +7,9 @@ include(GNUInstallDirs)
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
 
-set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
+if (NOT WIN32 AND NOT ANDROID)
+set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
+endif(NOT WIN32 AND NOT ANDROID)
 
 find_package(INDI REQUIRED)
 find_package(Nova REQUIRED)
