Switch off some drivers for OSX

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -38,16 +38,16 @@ option(WITH_ASICAM "Install ZWO Optics ASI Driver" On)
 
 # Add/remove cases for OSX
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-option(WITH_MI "Install Moravian Driver" Off)
-option(WITH_FLI "Install FLI Driver" Off)
-option(WITH_SBIG "Install SBIG Driver" Off)
-option(WITH_APOGEE "Install Apogee Driver" Off)
-option(WITH_QHY "Install QHY Driver" Off)
-option(WITH_DUINO "Install Ariduino Driver" Off)
-option(WITH_FISHCAMP "Install Fishcamp Driver" Off)
-option(WITH_GIGE "Install GiGE machine vision Driver" Off)
-option(WITH_DSI "Install Meade DSI Driver" Off)
-option(WITH_ASICAM "Install ZWO Optics ASI Driver" Off)
+set(WITH_MI FALSE)
+set(WITH_FLI FALSE)
+set(WITH_SBIG FALSE)
+set(WITH_APOGEE FALSE)
+set(WITH_QHY FALSE) 
+set(WITH_DUINO FALSE) 
+set(WITH_FISHCAMP FALSE) 
+set(WITH_GIGE FALSE) 
+set(WITH_DSI FALSE) 
+set(WITH_ASICAM FALSE) 
 endif()
 
 ## EQMod
