--- a/libindi/test/core/CMakeLists.txt
+++ b/libindi/test/core/CMakeLists.txt
@@ -9,7 +9,8 @@ ADD_EXECUTABLE(test_base64
 	${test_base64_SRCS}
 )
 TARGET_LINK_LIBRARIES(test_base64
-	indi
+	indiclient
+	indidriver
 	${GTEST_BOTH_LIBRARIES}
 	${GMOCK_LIBRARIES}
 	${CMAKE_THREAD_LIBS_INIT}
