Add drv_nexstarevo to travis branches

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ branches:
   only:
     - develop
     - master
-    - nse
+    - drv_nexstarevo
     - refactor/unittest
     - feature/travisosx
 
