--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ branches:
   only:
     - develop
     - master
-    - drv_nexstarevo
-    - drv_gpsd
+    - /drv_.*$/
     - refactor/unittest
     - feature/travisosx
 
