--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ branches:
     - develop
     - master
     - /drv_.*$/
+    - travis
     - refactor/unittest
     - feature/travisosx
 
@@ -21,7 +22,7 @@ before_install:
     - travis-ci/deps-${TRAVIS_OS_NAME}.sh
 
 install:
-    - echo Building INDI Core
+    - echo Building INDI Core and drivers
     - travis-ci/build-core.sh 
     - travis-ci/build-libs.sh 
     - travis-ci/build-3rdparty.sh
