--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -47,7 +47,7 @@ set(WITH_DUINO FALSE)
 set(WITH_FISHCAMP FALSE) 
 set(WITH_GIGE FALSE) 
 set(WITH_DSI FALSE) 
-set(WITH_ASICAM TRUE) 
+set(WITH_ASICAM FALSE) 
 endif()
 
 ## EQMod
