Trigger packaging on package branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ os:
 
 branches:
   only:
-    - develop
     - master
+    - develop
+    - package
     - /drv_.*$/
     - travis
     - refactor/unittest
