--- a/3rdparty/libqhy/CMakeLists.txt
+++ b/3rdparty/libqhy/CMakeLists.txt
@@ -19,17 +19,15 @@ set(UDEVRULES_INSTALL_DIR "/lib/udev/rules.d" CACHE STRING "Base directory for u
 set(LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/lib")
 
 IF(UNIX AND NOT WIN32)
- IF (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "armv6l")
+ IF (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "armv6l" OR CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "armv7l")
   exec_program(cp ARGS ${CMAKE_CURRENT_SOURCE_DIR}/libqhy_armv6.bin ${CMAKE_BINARY_DIR}/libqhy.so.${LIBQHY_VERSION})
- ELSEIF(CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "armv7l")
-   exec_program(cp ARGS ${CMAKE_CURRENT_SOURCE_DIR}/libqhy_armv7.bin ${CMAKE_BINARY_DIR}/libqhy.so.${LIBQHY_VERSION})
  ELSEIF(CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "aarch64")
   exec_program(cp ARGS ${CMAKE_CURRENT_SOURCE_DIR}/libqhy_armv8.bin ${CMAKE_BINARY_DIR}/libqhy.so.${LIBQHY_VERSION})
  ELSEIF(CMAKE_SIZEOF_VOID_P MATCHES "8")
   exec_program(cp ARGS ${CMAKE_CURRENT_SOURCE_DIR}/libqhy_x86_64.bin ${CMAKE_BINARY_DIR}/libqhy.so.${LIBQHY_VERSION})
  ELSE()
   exec_program(cp ARGS ${CMAKE_CURRENT_SOURCE_DIR}/libqhy_x86_32.bin ${CMAKE_BINARY_DIR}/libqhy.so.${LIBQHY_VERSION})
- ENDIF (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "armv6l")
+ ENDIF (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "armv6l" OR CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "armv7l")
 ENDIF(UNIX AND NOT WIN32)
 
 # Make sure symbolic links are installed
