Switch on MGen by default and off QHY

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -26,7 +26,7 @@ option(WITH_MI "Install Moravian Driver" Off)
 option(WITH_FLI "Install FLI Driver" On)
 option(WITH_SBIG "Install SBIG Driver" On)
 option(WITH_APOGEE "Install Apogee Driver" On)
-option(WITH_QHY "Install QHY Driver" On)
+option(WITH_QHY "Install QHY Driver" Off)
 option(WITH_GPHOTO "Install GPhoto Driver" On)
 option(WITH_QSI "Install QSI Driver" On)
 option(WITH_DUINO "Install Ariduino Driver" On)
@@ -35,7 +35,7 @@ option(WITH_GPSD "Install GPSD Driver" On)
 option(WITH_GIGE "Install GiGE machine vision Driver" Off)
 option(WITH_DSI "Install Meade DSI Driver" On)
 option(WITH_ASICAM "Install ZWO Optics ASI Driver" On)
-option(WITH_MGEN "Install MGen Autoguider" Off)
+option(WITH_MGEN "Install MGen Autoguider" On)
 
 # Add/remove cases for OSX
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
