--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -35,7 +35,7 @@ option(WITH_GPSD "Install GPSD Driver" On)
 option(WITH_GIGE "Install GiGE machine vision Driver" Off)
 option(WITH_DSI "Install Meade DSI Driver" On)
 option(WITH_ASICAM "Install ZWO Optics ASI Driver" On)
-option(WITH_MGEN "Install MGen Autoguider" On)
+option(WITH_MGEN "Install MGen Autoguider" Off)
 
 # Add/remove cases for OSX
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
