Try to repair QSI on OSX

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -44,7 +44,7 @@ set(WITH_FLI FALSE)
 set(WITH_SBIG FALSE)
 set(WITH_APOGEE FALSE)
 set(WITH_QHY FALSE) 
-set(WITH_QSI FALSE) 
+set(WITH_QSI TRUE) 
 set(WITH_DUINO FALSE) 
 set(WITH_FISHCAMP FALSE) 
 set(WITH_GIGE FALSE) 
