Adapt to the Android build changes in KStars

--- a/libindi/CMakeLists.txt
+++ b/libindi/CMakeLists.txt
@@ -15,9 +15,9 @@ if(ANDROID OR "${CMAKE_SYSTEM_NAME}" STREQUAL "Android")
   add_definitions(-DANDROID)
 endif()
 
-if (NOT WIN32 AND NOT ANDROID)
+if (NOT WIN32)
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
-endif(NOT WIN32 AND NOT ANDROID)
+endif(NOT WIN32)
 
 #####################################  INDI version  ################################################
 # N.B. DO NOT Forget to update version also in indiapi.h
@@ -164,11 +164,28 @@ endif (INDI_BUILD_POSIX_CLIENT)
 #
 #################################################################################################
 if (INDI_BUILD_QT5_CLIENT)
+set(QT_ANDROID "" CACHE path "Qt Android path")
 # 1. Dependencies
-find_package(Qt5Network)
-find_package(ZLIB REQUIRED)
-find_package(CFITSIO REQUIRED)
-find_package(Nova REQUIRED)
+if (ANDROID)
+    include(${QT_ANDROID}/lib/cmake/Qt5Network/Qt5NetworkConfig.cmake)
+    if (NOT CFITSIO_DIR)
+        message(FATAL_ERROR CFITSIO_DIR must be set)
+    else ()
+        set(CFITSIO_INCLUDE_DIR ${CFITSIO_DIR})
+        set(CFITSIO_LIBRARIES ${CFITSIO_DIR}/libcfitsio.a)
+    endif ()
+    if (NOT NOVA_DIR)
+        message(FATAL_ERROR NOVA_DIR must be set)
+    else ()
+        set(NOVA_INCLUDE_DIR ${NOVA_DIR}/src ${NOVA_DIR}/src/libnova)
+        set(NOVA_LIBRARIES ${NOVA_DIR}/lib/liblibnova.a)
+    endif ()
+else ()
+    find_package(Qt5Network)
+    find_package(ZLIB REQUIRED)
+    find_package(CFITSIO REQUIRED)
+    find_package(Nova REQUIRED)
+endif ()
 # 2. Includes
 include_directories( ${CMAKE_CURRENT_BINARY_DIR})
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR})
