--- a/3rdparty/libqhy/CMakeLists.txt
+++ b/3rdparty/libqhy/CMakeLists.txt
@@ -6,11 +6,21 @@ set(LIBQHY_SOVERSION "0")
 
 IF (APPLE)
 
-install(FILES qhyccd.h qhyccdcamdef.h qhyccderr.h qhyccdstruct.h DESTINATION include/libqhy)
-install(FILES libqhy_64.dylib DESTINATION lib RENAME libqhy.dylib)
+install(FILES qhyccd.h qhyccdcamdef.h qhyccderr.h qhyccdstruct.h log4z.h DESTINATION include/libqhy)
+install(FILES libqhy.dylib DESTINATION lib RENAME libqhy.0.dylib)
+
+# Make sure symbolic links are installed
+file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/make_libqhy_symlink.cmake "
+exec_program(${CMAKE_COMMAND} ARGS -E create_symlink libqhy.${LIBQHY_VERSION}.dylib libqhy.dylib)\n
+exec_program(${CMAKE_COMMAND} ARGS -E create_symlink libqhy.${LIBQHY_SOVERSION}.dylib libqhy.${LIBQHY_VERSION}.dylib)\n
+")
+
+install(SCRIPT ${CMAKE_CURRENT_BINARY_DIR}/make_libqhy_symlink.cmake)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libqhy.dylib DESTINATION lib)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libqhy.${LIBQHY_VERSION}.dylib DESTINATION lib)
 
 file(GLOB FIRMWARE "firmware/*")
-install(FILES ${FIRMWARE} DESTINATION "/usr/local/firmware")
+install(FILES ${FIRMWARE} DESTINATION "/usr/local/lib/qhy/firmware")
 
 ELSE()
 
