--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -26,7 +26,7 @@ option(WITH_MI "Install Moravian Driver" Off)
 option(WITH_FLI "Install FLI Driver" On)
 option(WITH_SBIG "Install SBIG Driver" On)
 option(WITH_APOGEE "Install Apogee Driver" On)
-option(WITH_QHY "Install QHY Driver" Off)
+option(WITH_QHY "Install QHY Driver" On)
 option(WITH_GPHOTO "Install GPhoto Driver" On)
 option(WITH_QSI "Install QSI Driver" On)
 option(WITH_DUINO "Install Ariduino Driver" On)
@@ -43,7 +43,6 @@ set(WITH_MI FALSE)
 set(WITH_FLI FALSE)
 set(WITH_SBIG FALSE)
 set(WITH_APOGEE FALSE)
-set(WITH_QHY FALSE) 
 set(WITH_DUINO FALSE) 
 set(WITH_FISHCAMP FALSE) 
 set(WITH_GIGE FALSE) 
