Add fxload-libusb for QHY new cameras

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -189,6 +189,11 @@ endif (WITH_MGEN)
 
 #endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 
+
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+add_subdirectory(fxload-libusb)
+endif()
+
 # Check if libraries are found. If not, we must build them, install them, THEN run CMake again to build and instal the drivers. If all the libraraies are installed, then we build and install the drivers only now.
 if (LIBRARIES_FOUND)
 message(STATUS "############################################################################")
