--- a/debian/kstars/control
+++ b/debian/kstars/control
@@ -23,7 +23,6 @@ Build-Depends: cmake,
                libkf5crash-dev,
                libkf5notifyconfig-dev,
                libeigen3-dev,
-               qml-module-qtquick-controls,
                zlib1g-dev,
                libcfitsio3-dev | libcfitsio-dev,
                libnova-dev,
@@ -40,7 +39,7 @@ Architecture: any
 Section: science
 conflicts: kstars
 replaces: kstars
-Depends: ${shlibs:Depends}, ${misc:Depends}, kstars-bleeding-data (>= ${source:Version}), kstars-bleeding-dbg (= ${binary:Version}), kded5, kinit, libindi1, indi-bin, breeze-icon-theme, oxygen-icon-theme
+Depends: ${shlibs:Depends}, ${misc:Depends}, kstars-bleeding-data (>= ${source:Version}), kstars-bleeding-dbg (= ${binary:Version}), kded5, kinit, libindi1, indi-bin, breeze-icon-theme, oxygen-icon-theme, qml-module-qtquick-controls
 Description: desktop planetarium for KDE
  KStars is a desktop planetarium for KDE, depicting an accurate graphical
  simulation of the night sky, from any location on Earth, at any date and time.
