--- a/debian/asi-common/rules
+++ b/debian/asi-common/rules
@@ -1,10 +1,7 @@
 #!/usr/bin/make -f
-# You must remove unused comment lines for the released package.
-#export DH_VERBOSE = 1
 
-%:
-	dh $@  
+include /usr/share/cdbs/1/rules/debhelper.mk
+include /usr/share/cdbs/1/class/cmake.mk
 
-#override_dh_auto_configure:
-#	dh_auto_configure -- \
-#	      -DCMAKE_LIBRARY_ARCHITECTURE="$(DEB_TARGET_MULTIARCH)"
+DEB_SRCDIR=asi-common
+DEB_DH_SHLIBDEPS_ARGS=-u--ignore-missing-info
