Add c files for code formatting

--- a/libindi/CMakeLists.txt
+++ b/libindi/CMakeLists.txt
@@ -52,7 +52,7 @@ ENDIF ()
 IF (UNIX OR APPLE)
     SET(FORMAT_CODE OFF CACHE BOOL "Enable Clang Format")
     IF (FORMAT_CODE MATCHES ON)
-        FILE(GLOB_RECURSE ALL_SOURCE_FILES *.cpp *.h)
+        FILE(GLOB_RECURSE ALL_SOURCE_FILES *.c *.cpp *.h)
 
         FOREACH(SOURCE_FILE ${ALL_SOURCE_FILES})
             STRING(FIND ${SOURCE_FILE} ${CMAKE_SOURCE_DIR} DIR_FOUND)
