--- a/3rdparty/indi-aagcloudwatcher/CMakeLists.txt
+++ b/3rdparty/indi-aagcloudwatcher/CMakeLists.txt
@@ -5,10 +5,6 @@ LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
 include(GNUInstallDirs)
 
-if (NOT WIN32 AND NOT ANDROID)
-set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
-endif(NOT WIN32 AND NOT ANDROID)
-
 set (AAG_VERSION_MAJOR 1)
 set (AAG_VERSION_MINOR 3)
 
@@ -21,6 +17,13 @@ include_directories(${INDI_INCLUDE_DIR})
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/indi_aagcloudwatcher.xml.cmake ${CMAKE_CURRENT_BINARY_DIR}/indi_aagcloudwatcher.xml)
+
+IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++11")
+ELSE ()
+    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+ENDIF ()
 
 set(indiaag_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/indi_aagcloudwatcher.cpp
