--- a/3rdparty/indi-sbig/CMakeLists.txt
+++ b/3rdparty/indi-sbig/CMakeLists.txt
@@ -22,10 +22,15 @@ include_directories( ${INDI_INCLUDE_DIR})
 include_directories( ${SBIG_INCLUDE_DIR})
 include_directories( ${CFITSIO_INCLUDE_DIR})
 
+IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++11")
+ELSE ()
+    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+ENDIF ()
+
 ############# SBIG CCD ###############
 if (CFITSIO_FOUND)
-
-set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 
 set(sbigccd_SRCS
 	${CMAKE_CURRENT_SOURCE_DIR}/sbig_ccd.cpp
