--- a/libindi/CMakeLists.txt
+++ b/libindi/CMakeLists.txt
@@ -15,7 +15,9 @@ if(ANDROID OR "${CMAKE_SYSTEM_NAME}" STREQUAL "Android")
   add_definitions(-DANDROID)
 endif()
 
-IF (NOT WIN32)
+IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++11")
+ELSE ()
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 ENDIF ()
