Fix the compilation on some systems

--- a/libindi/CMakeLists.txt
+++ b/libindi/CMakeLists.txt
@@ -35,6 +35,10 @@ ENDIF ()
 # Add security (hardening flags)
 IF (UNIX OR APPLE OR ANDROID)
     SET(SEC_COMP_FLAGS "-D_FORTIFY_SOURCE=2 -fstack-protector-all -fPIE")
+    # Make sure to add optimization flag. Some systems require this for _FORTIFY_SOURCE.
+    IF (NOT CMAKE_BUILD_TYPE MATCHES "MinSizeRel" AND NOT CMAKE_BUILD_TYPE MATCHES "Release" AND NOT CMAKE_BUILD_TYPE MATCHES "Debug")
+        SET(SEC_COMP_FLAGS "${SEC_COMP_FLAGS} -O1")
+    ENDIF ()
     IF (NOT ANDROID AND NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" AND NOT APPLE)
         SET(SEC_COMP_FLAGS "${SEC_COMP_FLAGS} -Wa,--noexecstack")
     ENDIF ()
