Add more test cases to Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,10 +35,18 @@ before_install:
 
 install:
     - echo Building INDI Core and drivers
-    - travis-ci/build-core.sh 
-    - travis-ci/build-libs.sh 
+    - travis-ci/build-core.sh
+    - travis-ci/build-libs.sh
     - travis-ci/build-3rdparty.sh
-    - travis-ci/build-deb-packages.sh 
+    - travis-ci/build-deb-packages.sh
+    - travis-ci/build-core.sh Debug
+    - travis-ci/build-libs.sh Debug
+    - travis-ci/build-3rdparty.sh Debug
+    - travis-ci/build-deb-packages.sh Debug
+    - travis-ci/build-core.sh Release
+    - travis-ci/build-libs.sh Release
+    - travis-ci/build-3rdparty.sh Release
+    - travis-ci/build-deb-packages.sh Release
 
 script:
     - travis-ci/run-tests.sh 
