Disable DSI with Clang [3rdparty]

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -67,16 +67,20 @@ option(WITH_ASICAM "Install ZWO Optics ASI Driver" On)
 option(WITH_MGEN "Install MGen Autoguider" Off)
 
 # Add/remove cases for OSX
-if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-set(WITH_MI FALSE)
-set(WITH_FLI FALSE)
-set(WITH_SBIG FALSE)
-set(WITH_APOGEE FALSE)
-set(WITH_DUINO FALSE) 
-set(WITH_FISHCAMP FALSE) 
-set(WITH_GIGE FALSE) 
-set(WITH_DSI FALSE) 
-endif()
+IF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    set(WITH_MI Off)
+    set(WITH_FLI Off)
+    set(WITH_SBIG Off)
+    set(WITH_APOGEE Off)
+    set(WITH_DUINO Off)
+    set(WITH_FISHCAMP Off)
+    set(WITH_GIGE Off)
+    set(WITH_DSI Off)
+ENDIF ()
+# Dsi contains invalid C++ codes what does not compile with Clang
+IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    SET(WITH_DSI Off)
+ENDIF ()
 
 ## EQMod
 if (WITH_EQMOD)
