--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -86,6 +86,9 @@ IF (UNIX OR APPLE)
     IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
         SET(COMP_FLAGS "${COMP_FLAGS} -Wno-unused-but-set-variable")
     ENDIF ()
+    IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 6.9.9)
+        SET(COMP_FLAGS "${COMP_FLAGS} -Wno-format-truncation")
+    ENDIF ()
     IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
         SET(COMP_FLAGS "${COMP_FLAGS} -Wno-nonnull -Wno-deprecated-declarations")
     ENDIF ()
